k8s/apps/fraternity/frat-logs/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frat-logs
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: frat-logs
  template:
    metadata:
      labels:
        component: frat-logs
    spec:
      containers:
        - name: app
          image: gastbob40/frat_logs
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      securityContext:
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - frat-logs
                    - key: component
                      operator: In
                      values:
                        - frat-logs
                topologyKey: kubernetes.io/hostname
