k8s/apps/fraternity/frat-logs/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frat-logs
spec:
  type: ClusterIP
  selector:
    component: frat-logs
  ports:
    - name: http
      port: 80
      targetPort: http
